# read-byte-slice

./: .travis.yml  Cargo.toml  README.md  README.md.skt.md
.github/workflows/: rust.yml
src/: lib.rs
